# ai-psychiatrist

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  BUG_AUDIT_CHECKLIST.md  CLAUDE.md  CONFIGURATION-PHILOSOPHY.md  CRITICAL_DATA_SPLIT_MISMATCH.md  DATA-PIPELINE-SPEC.md  EMBEDDING_REFACTOR_SPEC.md  EXPLANATION-HYPOTHESIS.md  FEATURES.md  GEMINI.md  HARDCODED_DEBT.md  HYPOTHESES-EXPLAINED.md  HYPOTHESES-FOR-IMPROVEMENT.md  HYPOTHESIS-FEWSHOT-DESIGN-FLAW.md  HYPOTHESIS-ZERO-SHOT-INFLATION.md  LICENSE  MODEL_WIRING.md  Makefile  NEXT-STEPS.md  NOTICE  PIPELINE-BRITTLENESS.md  POST-ABLATION-DEFAULTS.md  PROBLEM-SPEC35-SCORER-MODEL-GAP.md  PYDANTIC_AI_FALLBACK_ARCHITECTURE.md  README.md  REMOVE_LEGACY_SPEC.md  SPEC-DATA-SPLIT-FIX.md  SPEC-DOCUMENTATION-GAPS.md  index.html  mkdocs.yml  prompt.md  pyproject.toml  server.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml
_brainstorming/daic-woz-preprocessing/: index.html
_brainstorming/microsoft-agent-framework-integration/: index.html
_bugs/: index.html
_bugs/BUG-048-invalid-json-output-nan-metrics/: index.html
_legacy/: LICENSE
_legacy/agents/: meta_reviewer.py  qualitative_assessor_f.py  qualitative_assessor_z.py  qualitive_evaluator.py  quantitative_assessor_z.py
_legacy/analysis_output/: metareview_gemma_few_shot.csv  qual_gemma.csv  quan_gemma_zero_shot.jsonl
_legacy/assets/: ollama_example.py
_legacy/meta_review/: meta_review.py
_legacy/qualitative_assessment/: feedback_loop.py  qual_assessment.py
_legacy/quantitative_assessment/: embedding_batch_script.py  embedding_quantitative_analysis.ipynb  quantitative_analysis.py
_legacy/slurm/: job_assess.sh  job_ollama.sh
_research/hypotheses-explained/: index.html
_research/hypotheses-for-improvement/: index.html
_research/master-bug-audit/: index.html
_specs/: index.html
_specs/spec-061-total-phq8-score-prediction/: index.html
_specs/spec-062-binary-depression-classification/: index.html
_specs/spec-063-severity-inference-prompt-policy/: index.html
agents/: quantitative_assessor_f.py
architecture/architecture/: index.html
architecture/future-architecture/: index.html
architecture/pipeline/: index.html
clinical/clinical-understanding/: index.html
clinical/glossary/: index.html
clinical/phq8/: index.html
clinical/task-validity/: index.html
configs/agent-sampling-registry/: index.html
configs/configuration/: index.html
configs/configuration-philosophy/: index.html
data/artifact-namespace-registry/: index.html
data/daic-woz-preprocessing/: index.html
data/daic-woz-schema/: index.html
data/data-splits-overview/: index.html
data/keywords/: phq8_keywords.yaml
data/paper-split-registry/: index.html
data/patch-missing-phq8-values/: index.html
developer/api-endpoints/: index.html
developer/dependency-registry/: index.html
developer/error-handling/: index.html
developer/exceptions/: index.html
developer/testing/: index.html
docs/: DOCUMENTATION_ARCHITECTURE.md  REPRODUCTION_NOTES.md  bugs.md  index.md  paper-reproduction-analysis.md  pydantic-ai-fallback-mechanism.md
docs/_brainstorming/: daic-woz-preprocessing.md  microsoft-agent-framework-integration.md
docs/_bugs/: ANALYSIS-026-JSON-PARSING-ARCHITECTURE-AUDIT.md  BUG-001-float-equality-dominant-points.md  BUG-002-dry-violation-oracle-items.md  BUG-003-hardcoded-calibration-logic.md  BUG-004-embedding-linear-scan.md  BUG-027-consistency-temperature-optimization.md  BUG-029-evidence-grounding-too-strict.md  BUG-030-json-control-char-sanitization-incomplete.md  BUG-031-observability-gaps-debugging-failures.md  BUG-035-FEW-SHOT-PROMPT-CONFOUND.md  BUG-048-invalid-json-output-nan-metrics.md  bug-043-json-missing-comma-repair.md  bug-043-pydantic-ai-bypasses-tolerant-fixups.md  bug-045-quantitative-severity-underestimates-with-na.md  index.md  problem-huggingface-chunk-scores-missing.md
docs/_research/: MASTER_BUG_AUDIT.md  augrc-improvement-techniques-2026.md  hypotheses-explained.md  hypotheses-for-improvement.md  master-bug-audit.md  spec-sqpsychconv-cross-validation.md
docs/_specs/: daic-woz-transcript-preprocessing.md  index.md  spec-043-json-missing-comma-repair.md  spec-045-quantitative-severity-bounds.md  spec-046-selective-prediction-confidence-signals.md  spec-047-remove-keyword-backfill.md  spec-048-verbalized-confidence.md  spec-049-supervised-confidence-calibrator.md  spec-050-consistency-based-confidence.md  spec-051-advanced-csf-from-fd-shifts.md  spec-052-excess-aurc-augrc-metrics.md  spec-053-evidence-hallucination-detection.md  spec-054-strict-evidence-schema-validation.md  spec-055-embedding-nan-detection.md  spec-056-failure-pattern-observability.md  spec-057-embedding-dimension-strict-mode.md  spec-058-increase-pydantic-ai-retries.md  spec-059-json-repair-fallback.md  spec-060-retry-telemetry-metrics.md  spec-061-total-phq8-score-prediction.md  spec-062-binary-depression-classification.md  spec-063-severity-inference-prompt-policy.md
docs/architecture/: architecture.md  future-architecture.md  pipeline.md
docs/archive/: hardcoded-debt.md
docs/brainstorming/: MICROSOFT_AGENT_FRAMEWORK_INTEGRATION.md  daic-woz-preprocessing.md  investigation-zero-shot-beats-few-shot.md  pydantic-ai-integration.md
docs/bugs/: BUG-001_MOCK_IN_PRODUCTION_PATH.md  BUG-003_MACOS_RESOURCE_FORK_EXTRACTION.md  BUG-004_SPEC_09_5_CHECKPOINT_DRIFT.md  BUG-005_ASYNCMOCK_WARNING_IN_FEEDBACK_LOOP_TESTS.md  BUG-006_MISSING_REFERENCE_EMBEDDINGS_ARTIFACT.md  BUG-007_FEEDBACK_THRESHOLD_INCONSISTENT_LOW_SCORES.md  BUG-008_MODEL_SETTINGS_UNUSED_WRONG_MODEL_SELECTION.md  BUG-009_SILENT_EMBEDDING_DIMENSION_MISMATCH.md  BUG-010_SIMILARITY_RANGE_MISMATCH_CLAMPING.md  (+49 more)
scripts/: __init__.py  calibrate_verbalized_confidence.py  create_paper_split.py  evaluate_selective_prediction.py  generate_embeddings.py  patch_missing_phq8_values.py  prepare_dataset.py  preprocess_daic_woz_transcripts.py  reproduce_results.py  score_reference_chunks.py  train_confidence_calibrator.py
search/: search_index.json
tests/: __init__.py  conftest.py
(+599 files in other folders)
