[project]
name = "ai-psychiatrist"
version = "2.0.0"
description = "LLM-based Multi-Agent System for Depression Assessment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "TReNDS Center", email = "vcalhoun@gsu.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["llm", "mental-health", "depression", "phq-8", "multi-agent"]

dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.0",
    "structlog>=25.5.0",
    "orjson>=3.11.0",
    "pandas>=2.3.0",
    "numpy>=2.3.0",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.148.0",
    "mypy>=1.19.0",
    "ruff>=0.14.0",
    "pre-commit>=4.5.0",
    "respx>=0.22.0",  # httpx mocking
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.scripts]
ai-psychiatrist = "ai_psychiatrist.cli:main"

[project.urls]
Homepage = "https://github.com/trendscenter/ai-psychiatrist"
Documentation = "https://trendscenter.github.io/ai-psychiatrist"
Repository = "https://github.com/trendscenter/ai-psychiatrist"
Issues = "https://github.com/trendscenter/ai-psychiatrist/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_psychiatrist"]

# ============== RUFF ==============
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
# Exclude legacy code pending cleanup (BUG-013, BUG-015)
exclude = [
    "agents",                  # Legacy root-level agents (use src/ai_psychiatrist/agents/)
    "services",                # Legacy root-level services (use src/ai_psychiatrist/services/)
    "models",                  # Legacy models
    "visualization",           # Jupyter notebooks with whitespace issues
    "scripts",                 # Ad-hoc scripts
    "assets",                  # Example scripts
    "meta_review",             # Legacy meta-review scripts
    "qualitative_assessment",  # Legacy qualitative assessment
    "quantitative_assessment", # Legacy quantitative assessment
    ".git",
    "__pycache__",
    ".venv",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments (agents need many params)
    "PLR2004",  # Magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["ai_psychiatrist"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "PLR2004", "E501"]
"src/ai_psychiatrist/agents/prompts/**/*.py" = ["E501"]  # Prompts have long lines by design

# ============== PYTEST ==============
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=ai_psychiatrist",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may use mocks)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow tests (skip with -m 'not slow')",
]

# ============== MYPY ==============
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "numpy.*",
]
ignore_missing_imports = true

# ============== COVERAGE ==============
[tool.coverage.run]
branch = true
source = ["src/ai_psychiatrist"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
